--- a/style.css
+++ b/style.css
@@ -4,10 +4,28 @@
 
 text-align: center;
 
-background-color: rgb(81, 204, 188);
+
+}
+
+.card {
+
+display: inline-block;
+background-color: white;
+list-style: inside;
+text-align: justify;
 
 
 }
+
+ul{ text-align: justify;}
+
+body { 
+    
+    background-color: thistle;
+    margin: 10px 30px 10px 30px;
+
+}
+
 
 h1 {
 
@@ -15,15 +33,6 @@ h1 {
     font-family: "Lucida Console", monospace;
 }
 
-.list {
-
-    color: seashell;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-
-    
-}
 
 img {
 
@@ -32,4 +41,10 @@ img {
     border-radius: 50%;
 }
 
+li {
+
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: left;
+}
 
